--- a/clientviews/admin/lecture-admin.page.tmpl
+++ b/clientviews/admin/lecture-admin.page.tmpl
@@ -51,8 +51,8 @@
             <div class="form-group">
                 <label for="active">Active</label>
                 <select id="active" name="active" class="custom-select">
-                    <option value="0" {{if eq $course.Active 0}} selected {{end}}>No</option>
-                    <option value="1" {{if eq $course.Active 1}} selected {{end}}>Yes</option>
+                    <option value="0" {{if eq $lecture.Active 0}} selected {{end}}>No</option>
+                    <option value="1" {{if eq $lecture.Active 1}} selected {{end}}>Yes</option>
                 </select>
             </div>
 
