--- a/clientviews/admin/courses-admin.page.tmpl
+++ b/clientviews/admin/courses-admin.page.tmpl
@@ -47,12 +47,19 @@
                 </select>
             </div>
 
+            <div class="form-group ">
+                <label for="description">Description/Notes</label>
+                <input id="description" type="hidden" name="description"
+                       value="{{- if ne $course.Description "" -}}{{-  $course.Description -}}{{- end -}}"
+                >
+                <trix-editor class="trix-content" input="description"></trix-editor>
+            </div>
             <hr>
             <div class="float-left">
                 <h3>Lectures</h3>
             </div>
             <div class="float-right">
-                <a class="btn btn-outline-secondary" href="/admin/courses/lecture/{{$course.ID}}/0" >Add Lecture</a>
+                <a class="btn btn-outline-secondary" href="/admin/courses/lecture/{{$course.ID}}/0">Add Lecture</a>
             </div>
             <div class="clearfix"></div>
 
@@ -61,9 +68,9 @@
                     <a class="list-group-item list-group-item-action"
                        data-id="{{.ID}}"
                        id="sort_{{.ID}}"
-                       {{if eq .Active 0}}
-                       style="background: lightgrey;"
-                       {{end}}
+                            {{if eq .Active 0}}
+                                style="background: lightgrey;"
+                            {{end}}
                        href="/admin/courses/lecture/{{$course.ID}}/{{.ID}}">
                         {{if eq .Active 1}}
                             {{.LectureName}}
