--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -168,6 +168,7 @@
                 <p>&nbsp;</p>
                 {{$course := index .RowSets "course"}}
                 <h1>{{$course.CourseName}}</h1>
+                {{safeHTML $course.Description}}
                 <hr>
                 <h2>Lectures</h2>
                 <div class="list-group">
