--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -25,7 +25,7 @@
         a:hover
         {
             color: #2A76C1;
-            text-decoration: 1;
+            text-decoration: none;
             transition: color 0.5s ease;
         }
         #content_edit h1
