--- a/clientviews/admin/courses-admin.page.tmpl
+++ b/clientviews/admin/courses-admin.page.tmpl
@@ -11,76 +11,79 @@
     {{$course := index .RowSets "course"}}
     <form method="post" action="/admin/courses/{{$course.ID}}" novalidate class="needs-validation"
           id="course-form">
+        <div class="row">
+            <input type="hidden" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}">
+            <input type="hidden" name="action" id="action" value="0">
+            <input type="hidden" name="sort_list" id="sort-list">
 
-        <input type="hidden" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}">
-        <input type="hidden" name="action" id="action" value="0">
-        <input type="hidden" name="sort_list" id="sort-list">
+            <div class="col-md-6 col-sm-12 col-xs-12">
 
-        <div class="col-md-6 col-sm-12 col-xs-12">
-
-            <div class="form-group mt-3">
-                <label for="course_name">Course Name</label>
-                {{with .Form.Errors.Get "course_name"}}
-                    <label class='text-danger'>{{.}}</label>
-                {{end}}
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-font fa-fw"></i></span>
-                    </div>
-                    <input class="form-control required {{with .Form.Errors.Get "course_name"}} is-invalid {{end}}"
-                           id="course_name"
-                           required
-                           autocomplete="off" type='text'
-                           name='course_name'
-                           value='{{$course.CourseName}}'>
-                    <div class="invalid-feedback">
-                        Please enter a value
+                <div class="form-group mt-3">
+                    <label for="course_name">Course Name</label>
+                    {{with .Form.Errors.Get "course_name"}}
+                        <label class='text-danger'>{{.}}</label>
+                    {{end}}
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-font fa-fw"></i></span>
+                        </div>
+                        <input class="form-control required {{with .Form.Errors.Get "course_name"}} is-invalid {{end}}"
+                               id="course_name"
+                               required
+                               autocomplete="off" type='text'
+                               name='course_name'
+                               value='{{$course.CourseName}}'>
+                        <div class="invalid-feedback">
+                            Please enter a value
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="form-group ">
-                <label for="active">Active</label>
-                <select id="active" name="active" class="custom-select">
-                    <option value="0" {{if eq $course.Active 0}} selected {{end}}>No</option>
-                    <option value="1" {{if eq $course.Active 1}} selected {{end}}>Yes</option>
-                </select>
-            </div>
+                <div class="form-group ">
+                    <label for="active">Active</label>
+                    <select id="active" name="active" class="custom-select">
+                        <option value="0" {{if eq $course.Active 0}} selected {{end}}>No</option>
+                        <option value="1" {{if eq $course.Active 1}} selected {{end}}>Yes</option>
+                    </select>
+                </div>
 
-            <div class="form-group ">
-                <label for="description">Description/Notes</label>
-                <input id="description" type="hidden" name="description"
-                       value="{{- if ne $course.Description "" -}}{{-  $course.Description -}}{{- end -}}"
-                >
-                <trix-editor class="trix-content" input="description"></trix-editor>
-            </div>
-            <hr>
-            <div class="float-left">
-                <h3>Lectures</h3>
-            </div>
-            <div class="float-right">
-                <a class="btn btn-outline-secondary" href="/admin/courses/lecture/{{$course.ID}}/0">Add Lecture</a>
-            </div>
-            <div class="clearfix"></div>
+                <hr>
+                <div class="float-left">
+                    <h3>Lectures</h3>
+                </div>
+                <div class="float-right">
+                    <a class="btn btn-outline-secondary" href="/admin/courses/lecture/{{$course.ID}}/0">Add Lecture</a>
+                </div>
+                <div class="clearfix"></div>
 
-            <div class="list-group mt-3" id="lecture-list">
-                {{range $course.Lectures}}
-                    <a class="list-group-item list-group-item-action"
-                       data-id="{{.ID}}"
-                       id="sort_{{.ID}}"
-                            {{if eq .Active 0}}
-                                style="background: lightgrey;"
+                <div class="list-group mt-3" id="lecture-list">
+                    {{range $course.Lectures}}
+                        <a class="list-group-item list-group-item-action"
+                           data-id="{{.ID}}"
+                           id="sort_{{.ID}}"
+                                {{if eq .Active 0}}
+                                    style="background: lightgrey;"
+                                {{end}}
+                           href="/admin/courses/lecture/{{$course.ID}}/{{.ID}}">
+                            {{if eq .Active 1}}
+                                {{.LectureName}}
+                            {{else}}
+                                {{.LectureName}} (inactive)
                             {{end}}
-                       href="/admin/courses/lecture/{{$course.ID}}/{{.ID}}">
-                        {{if eq .Active 1}}
-                            {{.LectureName}}
-                        {{else}}
-                            {{.LectureName}} (inactive)
-                        {{end}}
-                    </a>
-                {{end}}
+                        </a>
+                    {{end}}
+                </div>
+                <div>&nbsp;</div>
             </div>
-            <div>&nbsp;</div>
+
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <div class="form-group mt-3">
+                    <label for="description">Description/Notes</label>
+                    <textarea id="description" name="description">
+                       {{- if ne $course.Description "" -}}{{-  $course.Description -}}{{- end -}}
+                </textarea>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col">
@@ -112,9 +115,20 @@
 {{end}}
 
 {{define "js"}}
+    <script src="https://cdn.ckeditor.com/ckeditor5/21.0.0/classic/ckeditor.js"></script>
     <script>
         let lectureList;
         let lectures;
+        let editor
+
+        ClassicEditor
+            .create(document.querySelector('#description'))
+            .then(newEditor => {
+                editor = newEditor;
+            })
+            .catch(error => {
+                console.error(error);
+            });
 
         document.addEventListener("DOMContentLoaded", function () {
             lectures = document.getElementById('lecture-list');
