--- a/clientviews/public/lecture.page.tmpl
+++ b/clientviews/public/lecture.page.tmpl
@@ -7,39 +7,29 @@
 
 
 {{define "css"}}
+    {{ .Page.PageStyles}}
+    {{ .Page.CSS}}
     <style>
-        a:link {
+        #lecture-div a:link {
             color: #2A76C1;
             transition: color 0.5s ease;
             text-decoration: none;
         }
 
-        a:visited.h3,
-        a:visited.read-more,
-        a:visited {
+        #lecture-div a:visited.h3,
+        #lecture-div a:visited.read-more,
+        #lecture-div a:visited {
             color: #2A76C1;
             transition: color 0.5s ease;
             text-decoration: none;
         }
 
-        a:hover.h3,
-        a:hover.read-more,
-        a:hover {
+        #lecture-div a:hover.h3,
+        #lecture-div a:hover.read-more,
+        #lecture-div a:hover {
             color: #2A76C1;
-            text-decoration: 1;
+            text-decoration: none;
             transition: color 0.5s ease;
-        }
-
-        #content_edit h1 {
-            font-size: 36pt
-        }
-
-        #content_edit h2 {
-            font-size: 30pt
-        }
-
-        #content_edit h3 {
-            font-size: 24pt
         }
     </style>
 {{end}}
@@ -65,24 +55,24 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <div class="form-group">
+                            <div class="form-group d-none">
                                 <label for="thetitledata">Page Name: </label>
                                 <input type="text" class="form-control required" name="page_title" id="thetitledata"
                                        value="{{.Page.PageTitle}}">
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group d-none">
                                 <label for="meta_tags">Meta Keywords: </label>
                                 <input type="text" class="form-control required" name="meta_tags" id="meta_tags"
                                        value="{{.Page.MetaTags}}">
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group d-none">
                                 <label for="meta">Meta Description: </label>
                                 <textarea class="form-control required" name="meta" id="meta">{{.Page.Meta}}</textarea>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group d-none">
                                 <label for="active">Page Status:</label>
                                 <select class="form-control" name="active" id="active">
                                     <option value="1" {{if eq .Page.Active 1}}selected{{end}}>Active</option>
@@ -92,7 +82,7 @@
                                 </select>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group d-none">
                                 <label for="access_level">Access Level:</label>
                                 <select class="form-control" name="access_level" id="access_level">
                                     <option value="0" {{if eq .Page.AccessLevel 0}}selected{{end}}>Public Access
@@ -109,7 +99,7 @@
                             </div>
 
                             {{if gt .Page.ID 0}}
-                                <div class="form-group">
+                                <div class="form-group d-none">
                                     <label for="slider">Slider?</label>
                                     <select class="form-control" name="slider" id="slider">
                                         <option value="0" {{if eq .Page.HasSlider 0}}selected{{end}}>No</option>
@@ -123,12 +113,12 @@
                                 </div>
                             {{end}}
 
-                            <div class="form-group text-center">
+                            <div class="form-group text-center d-none">
                                 <a class="btn btn-info btn-sm text-white" style="color: white;" href="#!"
                                    onclick="showMenuOptions()">Menu Settings</a>
                             </div>
 
-                            <div class="form-group text-center">
+                            <div class="form-group text-center d-none">
                                 {{if gt .Page.ID 0}}
                                     <a class="btn btn-info btn-sm text-white" style="color: white;" href="#!"
                                        onclick="showOpenGraphModal()">Sharing Image</a>
@@ -136,13 +126,13 @@
                                 {{end}}
                             </div>
 
-                            <div class="form-group text-center">
+                            <div class="form-group text-center d-none">
                                 <a href="#!" onclick="openJSModal()" class="edit-js-css" id="jsBtn">
                                     <i class="edit-js-css ion ion-social-javascript"></i>
                                 </a>
 
                                 &nbsp;
-                                <a href="#!" class="edit-js-css" id="cssBtn" onclick="openCSSModal()">
+                                <a href="#!" class="edit-js-css d-none" id="cssBtn" onclick="openCSSModal()">
                                     <i class="edit-js-css ion ion-social-css3"></i>
                                 </a>
                             </div>
@@ -161,7 +151,7 @@
 
 {{define "body"}}
     <div class="clearfix"></div>
-    <div class="container">
+    <div class="container" id="lecture-div">
         <div class="row">
             <div class="col">
                 <p>&nbsp;</p>
@@ -175,11 +165,11 @@
                 </div>
                 {{end}}
 
-                {{if ne $lecture.Notes ""}}
-                    <hr>
-                {{safeHTML $lecture.Notes}}
-                {{end}}
-                <hr>
+                <div id="content_edit" class="is-wrapper">
+                    {{safeHTML $lecture.Notes}}
+                </div>
+                <p>&nbsp;</p>
+                <hr class="mt-3">
                 <div class="text-center">
                     <a class="btn btn-outline-secondary" href="/courses/overview/{{$lecture.CourseID}}">Back to Course
                         Overview</a>
@@ -192,6 +182,7 @@
 
 
 {{define "buttons"}}
+    {{$lecture := index .RowSets "lecture"}}
     {{if .IsAuthenticated}}
         {{if hasRole "pages" .Auth.ID}}
             <div id="bottomSaveBar" class="d-none show-on-edit">
@@ -207,7 +198,7 @@
 
                         <div class="col-3">
                             {{if gt .Page.ID 1}}
-                                <a class="btn btn-info mb5 btn-rounded text-white" href="/{{ .Page.Slug}}">Cancel</a>
+                                <a class="btn btn-info mb5 btn-rounded text-white" href="/courses/lecture/{{$lecture.ID}}">Cancel</a>
                             {{else}}
                                 <a class="btn btn-info mb5 btn-rounded text-white" href="/">Cancel</a>
                             {{end}}
@@ -235,7 +226,7 @@
     {{ .Page.JS}}
 
     {{if .IsAuthenticated}}
-        <form method="post" name="hiddensavepage" id="hiddensavepage" action="/admin/pages/ajax/savepage">
+        <form method="post" name="hiddensavepage" id="hiddensavepage" action="/admin/courses/lecture/ajax/savelecture">
             <input type="hidden" name="page_id" value="{{.Page.ID}}" id="hidden_page_id">
             <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
             <input type="hidden" name="thedata" id="hidden_thedata">
@@ -262,7 +253,7 @@
 
             {{if hasRole "pages" .Auth.ID}}
                 {{template "css-js-modal" .}}
-                {{template "vcms-edit-page-js" .}}
+                {{template "vcms-edit-lecture-js" .}}
                 {{template "slider-modal" .}}
                 {{template "slider-text-modal" .}}
                 {{template "menu-custom-modal" .}}
