Add title to course page

--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -1,7 +1,9 @@
 {{template "base" .}}
 
-{{define "title"}}{{ index (.Page.TitleMap) $.Lang}}{{end}}
-
+{{define "title"}}
+    {{$course := index .RowSets "course"}}
+    {{$course.CourseName}}
+{{end}}
 
 {{define "css"}}
     <style>
